envoy-opa/kong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
  creationTimestamp: "2021-06-20T15:30:08Z"
  generation: 7
  labels:
    app: kong
  name: kong
  namespace: default
  resourceVersion: "20693"
  selfLink: /apis/apps/v1/namespaces/default/deployments/kong
  uid: 8e90143b-ca13-41e1-92f2-0c0cfbf16f46
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kong
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2021-06-21T01:13:50+05:30"
      creationTimestamp: null
      labels:
        app: kong
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: kong.conf
        image: keshavprasad/kong:0.14.1
        imagePullPolicy: IfNotPresent
        name: kong
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - args:
        - envoy
        - --config-path
        - /config/envoy-kong.yaml
        env:
        - name: ENVOY_UID
          value: "1111"
        image: envoyproxy/envoy:v1.17.0
        imagePullPolicy: IfNotPresent
        name: envoy
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: proxy-config
          readOnly: true
      - args:
        - run
        - --server
        - --addr=localhost:8181
        - --diagnostic-addr=0.0.0.0:8282
        - --set=plugins.envoy_ext_authz_grpc.addr=:9191
        - --set=plugins.envoy_ext_authz_grpc.path=envoy/authz/allow
        - --set=decision_logs.console=true
        - --ignore=.*
        - /policy/policy.rego
        image: openpolicyagent/opa:latest-envoy
        imagePullPolicy: IfNotPresent
        name: opa
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /policy
          name: opa-policy
          readOnly: true
      dnsPolicy: ClusterFirst
      initContainers:
      - args:
        - -p
        - "8888"
        - -u
        - "1111"
        - -w
        - "8282"
        image: openpolicyagent/proxy_init:v5
        imagePullPolicy: IfNotPresent
        name: proxy-init
        resources: {}
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          runAsNonRoot: false
          runAsUser: 0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: kong-proxy-config
        name: proxy-config
      - name: opa-policy
        secret:
          defaultMode: 420
          secretName: opa-policy
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-06-20T19:42:51Z"
    lastUpdateTime: "2021-06-20T19:42:51Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-06-20T15:30:08Z"
    lastUpdateTime: "2021-06-20T19:43:52Z"
    message: ReplicaSet "kong-585b77fbcd" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
