envoy-opa/kong/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-06-20T15:56:07Z"
  labels:
    app: kong
  name: kong
  namespace: default
  resourceVersion: "8219"
  selfLink: /api/v1/namespaces/default/services/kong
  uid: 93e479d3-589e-4591-a7da-976cfd254e77
spec:
  clusterIP: 10.43.102.169
  externalTrafficPolicy: Cluster
  ports:
  - name: admin-api
    nodePort: 31876
    port: 8001
    protocol: TCP
    targetPort: 8001
  - name: api
    nodePort: 31875
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: kong
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 172.19.0.2
